LaTeX. Rare INCOMPATIBILITY for ambitious document antiquotations that
generate Latex source on their own account, instead of using regular
Pretty.T interfaces (that are based on Latex.output_ops internally).
Note that basic Markup.markup cannot be used for Latex output: proper
Pretty.T operations are required (e.g. Pretty.mark_str).


*** System ***

* The Build_Manager module has replaced previous glue-code for Jenkins
integration. The module contains a server that coordinates continuous
integration jobs and user-submitted build tasks and displays them via
web front-end. Users can submit tasks in the same manner as with the
local build tool, for example:

  isabelle build_task -o build_manager_ssh_user=huch -c -A: -a -X slow

This requires SSH access to the server and membership in a common Unix
group (same requirements as push access to the Isabelle repository).

* The Isabelle/Scala type Bytes has become more scalable, with support
for incremental construction via Bytes.Builder. There is no longer an
artificial size limit, in contrast to Java byte arrays (max. 2 GiB).
Bytes operations on files, streams, encode/decode, compress/uncompress,
etc. have become more efficient, and bypass Java strings (max. 1 GiB).
In particular, YXML parsing and printing now works on very large byte
vectors as well: only the individual content nodes are limited by the
built-in string size.



New in Isabelle2024 (May 2024)
------------------------------

*** General ***

* Dropped support for very old operating systems. The platform
base-lines are now as follows:

  - Ubuntu Linux 18.04 LTS
  - macOS 11 Big Sur
  - Windows 10 or Windows Server 2012 R2

* The arm64-linux platform is now officially supported, although a few
(non-essential) tools are missing:

  - Z3
  - CVC4
  - MLton
  - Nunchaku + smbc (experimental)

* The configuration option "unify_trace" (default: false) guards tracing
of higher-order unification, which is ubiquitous in assumption steps and